# botnik

./: CLAUDE.md  CMakeLists.txt  README.md
apps/battery/: CMakeLists.txt  main.cpp
apps/clock/: CMakeLists.txt  main.cpp
apps/config/: CMakeLists.txt  main.cpp
apps/volume/: CMakeLists.txt  main.cpp
apps/wifi/: CMakeLists.txt  main.cpp
qml/: Main.qml
scripts/: test-headless.sh
src/: applauncher.cpp  applauncher.h  chatmodel.cpp  chatmodel.h  compositor.cpp  compositor.h  headlesscompositor.cpp  headlesscompositor.h  main.cpp  ollamaclient.cpp  ollamaclient.h  stdinreader.cpp  stdinreader.h  toolhost.cpp  toolhost.h  windowtools.cpp  windowtools.h
